:sparkles: maven 插件